force-app/main/default/objects/Survey__c/fields/AspirationsTotal__c.field-meta.xml
<CustomField>
    <fullName>AspirationsTotal__c</fullName>
    <formula>I_do_my_best_in_my_studies_at_school__c + Working_towards_having_career_I_want__c + Going_to_be_the_best_that_I_can_be__c + Put_my_mind_to_something_I_can_achieve__c + I_plan_to_go_to_collegeuniversity__c + I_am_excited_about_the_future__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sums the &apos;aspiration&apos; scores</inlineHelpText>
    <label>Aspirations Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>