force-app/main/default/objects/Survey__c/fields/ConfidenceTotal__c.field-meta.xml
<CustomField>
    <fullName>ConfidenceTotal__c</fullName>
    <formula>I_am_resilient__c + Empowered_to_make_own_decisions__c + Understand_choices_in_relationship__c + Keep_safe_sexual_relationship__c + I_know_how_to_be_safe_online__c + I_can_make_positive_choices_for_myself__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sums all confidence scores</inlineHelpText>
    <label>Confidence Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>