force-app/main/default/objects/Survey__c/fields/Confident_I_know_healthy_relationship__c.field-meta.xml
<CustomField>
    <fullName>Confident_I_know_healthy_relationship__c</fullName>
    <label>Confident I know healthy relationship</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>