force-app/main/default/objects/Survey__c/fields/DateSubmitted__c.field-meta.xml
<CustomField>
    <fullName>DateSubmitted__c</fullName>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>