force-app/main/default/objects/Survey__c/fields/Empowered_to_make_own_decisions__c.field-meta.xml
<CustomField>
    <fullName>Empowered_to_make_own_decisions__c</fullName>
    <inlineHelpText>I feel empowered to make my own decisions</inlineHelpText>
    <label>Empowered to make own decisions</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>