force-app/main/default/objects/Survey__c/fields/Going_to_be_the_best_that_I_can_be__c.field-meta.xml
<CustomField>
    <fullName>Going_to_be_the_best_that_I_can_be__c</fullName>
    <label>Going to be the best that I can be</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>