force-app/main/default/objects/Survey__c/fields/I_am_excited_about_the_future__c.field-meta.xml
<CustomField>
    <fullName>I_am_excited_about_the_future__c</fullName>
    <label>I am excited about the future</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>