force-app/main/default/objects/Survey__c/fields/I_am_happy_in_my_own_skin__c.field-meta.xml
<CustomField>
    <fullName>I_am_happy_in_my_own_skin__c</fullName>
    <label>I am happy in my own skin</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>