force-app/main/default/objects/Survey__c/fields/I_am_resilient__c.field-meta.xml
<CustomField>
    <fullName>I_am_resilient__c</fullName>
    <label>I am resilient</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>