force-app/main/default/objects/Survey__c/fields/I_can_make_positive_choices_for_myself__c.field-meta.xml
<CustomField>
    <fullName>I_can_make_positive_choices_for_myself__c</fullName>
    <label>I can make positive choices for myself</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>