force-app/main/default/objects/Survey__c/fields/I_deserve_to_be_happy__c.field-meta.xml
<CustomField>
    <fullName>I_deserve_to_be_happy__c</fullName>
    <label>I deserve to be happy</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>