force-app/main/default/objects/Survey__c/fields/I_do_my_best_in_my_studies_at_school__c.field-meta.xml
<CustomField>
    <fullName>I_do_my_best_in_my_studies_at_school__c</fullName>
    <label>I do my best in my studies at school</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>