force-app/main/default/objects/Survey__c/fields/I_eat_foods_that_nourish_my_body__c.field-meta.xml
<CustomField>
    <fullName>I_eat_foods_that_nourish_my_body__c</fullName>
    <label>I eat foods that nourish my body</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>