force-app/main/default/objects/Survey__c/fields/I_have_a_positive_body_image__c.field-meta.xml
<CustomField>
    <fullName>I_have_a_positive_body_image__c</fullName>
    <label>I have a positive body image</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>