force-app/main/default/objects/Survey__c/fields/I_know_how_to_be_safe_online__c.field-meta.xml
<CustomField>
    <fullName>I_know_how_to_be_safe_online__c</fullName>
    <label>I know how to be safe online</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>