force-app/main/default/objects/Survey__c/fields/I_plan_to_go_to_collegeuniversity__c.field-meta.xml
<CustomField>
    <fullName>I_plan_to_go_to_collegeuniversity__c</fullName>
    <label>I plan to go to college/university</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>