force-app/main/default/objects/Survey__c/fields/I_respect_myself_and_my_body__c.field-meta.xml
<CustomField>
    <fullName>I_respect_myself_and_my_body__c</fullName>
    <label>I respect myself and my body</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>