force-app/main/default/objects/Survey__c/fields/I_surround_myself_with_positive_people__c.field-meta.xml
<CustomField>
    <fullName>I_surround_myself_with_positive_people__c</fullName>
    <label>I surround myself with positive people</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>