force-app/main/default/objects/Survey__c/fields/Keep_safe_sexual_relationship__c.field-meta.xml
<CustomField>
    <fullName>Keep_safe_sexual_relationship__c</fullName>
    <inlineHelpText>I understand how to keep myself safe in a sexual relationship</inlineHelpText>
    <label>Keep safe, sexual relationship</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>