force-app/main/default/objects/Survey__c/fields/Put_my_mind_to_something_I_can_achieve__c.field-meta.xml
<CustomField>
    <fullName>Put_my_mind_to_something_I_can_achieve__c</fullName>
    <inlineHelpText>I know if I put my mind to something I can achieve anything</inlineHelpText>
    <label>Put my mind to something I can achieve</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>