force-app/main/default/objects/Survey__c/fields/SelfWorthTotal__c.field-meta.xml
<CustomField>
    <fullName>SelfWorthTotal__c</fullName>
    <formula>I_am_happy_in_my_own_skin__c + I_deserve_to_be_happy__c + I_respect_myself_and_my_body__c + I_eat_foods_that_nourish_my_body__c + I_have_a_positive_body_image__c + I_surround_myself_with_positive_people__c + Confident_I_know_healthy_relationship__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sums the total of &apos;self-worth&apos; questions</inlineHelpText>
    <label>Self Worth Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>