force-app/main/default/objects/Survey__c/fields/Understand_choices_in_relationship__c.field-meta.xml
<CustomField>
    <fullName>Understand_choices_in_relationship__c</fullName>
    <inlineHelpText>I understand my choices in a relationship</inlineHelpText>
    <label>Understand choices in relationship</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>