force-app/main/default/objects/Survey__c/fields/Working_towards_having_career_I_want__c.field-meta.xml
<CustomField>
    <fullName>Working_towards_having_career_I_want__c</fullName>
    <inlineHelpText>I am working towards having the 
career I want</inlineHelpText>
    <label>Working towards having career I want</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>